GNOME Bugzilla – Bug 727643
Segfault in gtk-3.12.0
Last modified: 2014-04-05 15:24:29 UTC
This is running glib-2.40.0, gtk-3.12.0 (both compiled with debug symbols), and nautilus 3.12.0. I'm seeing problems with gtk-3.12.0. This happens when opening a new tab in that application. Checking the backtrace: http://pastebin.com/ZkMWJJ66 I see that in frame1 gtk_overlay_get_main_widget_allocation gets a NULL main_widget. GTK_IS_SCROLLED_WINDOW returns that this NULL object is scrollable, and thus gtk_widget_get_allocated_width gets called with a NULL object, where it segfaults.
Created attachment 273610 [details] backtrace of the segfault